Fixed grids overflowing the box

--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 .grid-container {
   box-sizing: border-box;
-  width: 510px;
-  height: 510px;
+  width: 510.4px;
+  height: 510.4px;
   border: black solid 5px;
+  /* display: flex;
+  flex-wrap: wrap; */
 }
 
 .grids {
